# reserva-espacios-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  READMEredis.md  app.py  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  reserva-espacios-realm.json  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml
docs/: configuracion-ssl.md
keycloak-theme/reserva-espacios/login/: theme.properties
keycloak-theme/reserva-espacios/login/messages/: messages_es.properties
keycloak-theme/reserva-espacios/login/resources/css/: login.css
nginx/: nginx-initial.conf  nginx.conf
src/: app.py  config.py  database.py
src/alembic/: env.py
src/alembic/versions/: 2eab92770351_add_planos_spaces_zones_tables.py  75cb16d1c0cd_add_expires_at_to_reservas.py  7a9fe6e18817_add_missing_models.py  a1b2c3d4e5f6_add_user_profiles_table.py  b0b25b00d7ed_change_plano_url_from_string_to_text.py  c3d4e5f6g7h8_add_visible_to_eventos.py  d8e9f0a1b2c3_add_pixels_per_meter_to_planos.py  e9f0a1b2c3d4_add_rotation_to_polygons.py
src/auth/: __init__.py  decorators.py  keycloak.py
src/endpoints/: __init__.py  health.py
src/eventos/: __init__.py  routes.py
src/eventos/models/: __init__.py  evento.py
src/health/: routes.py
src/planos/: __init__.py  routes.py
src/planos/models/: __init__.py  plano.py
src/redis_client/: __init__.py  client.py  expiration_listener.py  service.py
src/reservas/: __init__.py  routes.py  service.py
src/reservas/models/: __init__.py  reserva.py
src/services/: s3_service.py
src/settings/: __init__.py
src/settings/models/: __init__.py  setting.py
src/spaces/: routes.py
src/spaces/models/: polygon.py  space.py  zone.py
src/tests/: conftest.py  test_auth_decorators.py  test_models.py  test_reservas_routes.py  test_reservas_service.py
src/user_profiles/: __init__.py  routes.py
src/user_profiles/models/: __init__.py  user_profile.py
src/utils/: db_utils.py
src/websocket/: __init__.py  socket_manager.py
